More ideological analysis.

--- a/IdeologicalBlues.html
+++ b/IdeologicalBlues.html
@@ -343,8 +343,114 @@
             </p>
 
             <p>
-                "You don't know reality, because everything you think is real is
-                simply electrical signals in your brain."
+                But, let us again turn away from hotly contested political
+                examples, and look at another case that has little to do with
+                any left-right alignment: in this instance, the ideology in
+                question is "physicalism," which holds that the only aspects of
+                what we experience every day that "really exist" are those that
+                appear as measurable by physics. You think that you are in
+                love? Well, that is "really" just some electrical activity in
+                your brain. Perhaps you had an experience of contact with some
+                transcendent reality? Nope, that too was just electrical
+                activity in your brain. In fact, everything you think you
+                "know" about the world is really just your experience of your
+                own brain states.  Prominent entrepreneur Elon Musk recently
+                expressed a cornerstone of this ideology when he tweeted:
+                "We are literally a brain in a vat. The vat is your skull.
+                Everything you think is real is an electrical signal."
+                Once again, the problem with this sort of statement
+                <i>ought</i> to be obvious, at least to anyone seriously
+                engaged in contemplating reality, and not just trying to shore
+                up some previously embraced dream world: if our ideas of what
+                is real actually don't make reliable contact with what is
+                actually real, then how does Musk know that human beings really
+                have "skulls"? After all, aren't "skulls" just another one of
+                those items we believe are real but are, in fact, just "an
+                electrical signal"? Going even further... how does Musk even
+                know there is any such thing as "electrical signals"? After
+                all, our only evidence for the existence of electrical signals
+                comes to us through our perceptual apparatus... which,
+                according to Musk, can't be relied upon as being genuinely in
+                touch with what is actually real. Since it is only through
+                these "electrical signals," which may have little inherent
+                connection to reality, that we know about skulls, or even about
+                electricity... well, Musk's whole "profound" insight falls
+                apart as self-undermining rubbish. Nevertheless, over 8000
+                Twitter users "liked" this bit of nonsense. Why? Because it
+                offered them a concise statement of how they could shield their
+                physicalist ideology from being penetrated by reality: if, for
+                instance, you argue against it by noting that affection between
+                living creatures seems to be commonplace and not simply
+                physical, the physicalist can respond, "Well, you think so just
+                because of some electrical activity in your skull." The trope
+                serves to defend an ideology against penetration by reality,
+                not to rationally respond to outside criticism.
+            </p>
+
+            <p>
+                So, how do these musings on ideology help us to understand the
+                tide of "wokeness" that is currently inundating many US (and
+                other) college campuses, as well as coursing through the public
+                pronouncements of a multitude of major corporations?
+                First of all, it is important to identify the "woke" movement
+                <i>as</i> an ideology, and recognize its kinship with other
+                ideologies, such as Comunism and Nazism. That recognition alone
+                could wake many to the dangers of wokeness: since ideologies
+                promise heaven on earth, but can never actually deliver on the
+                promise, to continue in existence, they must continually
+                discover more and more pockets of resistance that are thwarting
+                the realization of the kingdom. Thus, in the Soviet Union, if
+                reality continued to fall short of the communist paradise, the
+                solution was to ferret out more and more "enemies of the
+                people," and eliminate them. If Nazi Germany's plans for
+                European domination were experiencing setbacks, the only
+                explanation permissible from inside their ideological "second
+                reality" was that they had not yet achieved the "final
+                solution" of the "Jewish problem."
+            </p>
+
+            <p>
+                And so, even as "wokeness" has achieved one after another of
+                its aims... diversity departments in every major corporation
+                and university, the legalization of gay marriage, "bathroom
+                rights" for transexuals, and "multicultural" curriculums
+                in public schools, the woke continually become ever more shrill
+                and dissatisfied about how oppresive our culture remains.
+                (I use scare quotes around "multiculturalism" aboce
+                because, while I would enthusiastically
+                endorse <i>real</i> multiculturalism in schools -- for
+                instance, requiring students to become fluent in an Asian
+                or Native American language, to master some polyrhythmic
+                West African or Indian music, or to learn to read the Koran in
+                Arabic -- what passes for multiculturalism today is generally
+                just a very superficial "museum tour" of a gallimaufry of
+                trendy cultures: the Cubans, don't they have great music! The
+                Chinese, great vases, And the Mexicans, what tasty tacos!)
+                Once we understand the pattern common to all ideologies, their
+                promise to create heaven on earth, coupled with their inherent
+                inability to deliver on that promise, and thus their need, if
+                they are continue in existence, to assign blame for that
+                failure to a demonized enemy who resists the coming of the
+                kingdom, we can understand the dynamic at work wherever the
+                woke are in charge. Thus, anyone who refuses to learn the
+                ever-increasing number of new pronouns that the woke demand we
+                use, or who objects to confused young children being subjected
+                to hormonal therapy to "help" them become their "true" selves,
+                is labeled as "transphobic" and ordered to check their
+                "cisgendered" privilege. Any white person who finds themselves
+                a member of an ever more woke organization must declare their
+                very genetic heritage, a thing that they certainly did not
+                choose to adopt, to be in itself a mark of their sinfullness,
+                for which they must continually atone.
+            </p>
+
+            <p>
+                Once we understand this dynamic, common to all ideologies, it
+                is clear that there is no "reasonable, middle ground" upon
+                which the "non-woke" can reach a modus vivendi with the woke.
+                Every concession made to woke ideology will soon enough prove
+                to be inadequate, since each concession will not result in the
+                realization of the kingdom.
             </p>
 
             <p>
