More ideological analysis.

--- a/IdeologicalBlues.html
+++ b/IdeologicalBlues.html
@@ -450,7 +450,20 @@
                 which the "non-woke" can reach a modus vivendi with the woke.
                 Every concession made to woke ideology will soon enough prove
                 to be inadequate, since each concession will not result in the
-                realization of the kingdom.
+                realization of the kingdom of heaven on earth. A demand that
+                elementary school children read books like <i>Heather Has Two
+                Mommies</i>, will, once the effect of the concession has proven
+                to be inadequate, be followed by a demand that one of those
+                mommies, who turns out to be a drag queen, be allowed to come
+                to school and read to the children. And once it is admitted
+                that that has not been enough to perfect earthly life, those
+                children will be asked to play out roles in which they are the
+                opposite sex of their own, or to write love letters in which
+                they romance a potential same-sex partner
+                (https://www.theamericanconservative.com/dreher/queering-children-imaginations-rudolph-drag-queen-story-hour/).
+                And when that doesn't work... well, I leave it to the reader's
+                imagination as to what will come next, if they have the stomach
+                to do so.
             </p>
 
             <p>
@@ -463,7 +476,23 @@
                 existence of the Federal Reserve, voting for (or against)
                 affirmative action, working to lower (or raise) tax rates, or,
                 in general, adopting any particular policy positions or
-                political platforms at all. Rather, once we reject the siren
+                political platforms at all. In fact, it is probably the case
+                that every ideological movement contains within its construct
+                at least some true insights into social problems, without which
+                it would lose all plausibility. Marxism is nonsense, but Marx
+                himself was a genius, albeit a twisted one, who often had
+                brilliant insights into social reality. We can and should
+                recognize the value of those insights, even while we reject the
+                dream world Marx built around them. Similarly, rejecting woke
+                ideology should not mean that we reject wholesale every
+                complaint the woke voice about our current situation: many of
+                those complaints are valid, or at least contain a kernel of
+                validity. It is the fact that "the woke" are saying many things
+                that are true that attracts people to their movement.
+            </p>
+
+            <p>
+                Rather, once we reject the siren
                 song of ideologies offering easy answers to the complex
                 problems of the real world, we can accept that fixing those
                 problems is usually difficult and fraught with unforeseen side
