More ideological analysis.

--- a/IdeologicalBlues.html
+++ b/IdeologicalBlues.html
@@ -488,7 +488,9 @@
                 complaint the woke voice about our current situation: many of
                 those complaints are valid, or at least contain a kernel of
                 validity. It is the fact that "the woke" are saying many things
-                that are true that attracts people to their movement.
+                that are true that attracts people to their movement, just as
+                the fact that many capitalists <i>were</i> greedy bastards made
+                Marxism plausible.
             </p>
 
             <p>
@@ -497,7 +499,10 @@
                 problems of the real world, we can accept that fixing those
                 problems is usually difficult and fraught with unforeseen side
                 effects, that our own judgement of the best way to address them
-                is only 
+                is at best an educated guess, and that acknowledging these
+                facts is not "selling out," but, in truth, the only honest way
+                forward.
+                
             </p>
 
 
