--- a/IdeologicalBlues.html
+++ b/IdeologicalBlues.html
@@ -56,11 +56,45 @@
 			They Woke Up This Morning, They Had Those Ideological Blues
 		</h1>
 
+        <p>
+            An advance warning: in this essay, I am going to employ a
+            particular definition of "ideology." It may not be the definition
+            you like: if not, you can substitute a different word, of your own
+            choosing, whenever I write "ideology." Definitions, in and of
+            themselves, are never "correct" or "incorrect." If I say, from now
+            on, in this essay, I will use "horse" to mean "a sad man sitting
+            alone in a diner," you may think my usage very odd, but it is not
+            "wrong," in that those particular sounds have no inherent meaning,
+            and I have explicitly told you I am using them in an unusual way.
+            Of course, if I then claim, "And this is how most English speakers
+            use the word 'horse,'" my claim is untrue, but not because I
+            defined the word in an idiosyncratic way, but because of my
+            empirical claim that my definition is widely shared. However, in
+            general, definitions of words should be judged based upon whether a
+            proferred definition, even if it might diverge from common usage,
+            helps us to think more clearly on some topic, or not. So I ask you
+            to suspend judgment on the definition of "ideology" I will use 
+            here, until you have considered why I believe this definition is
+            useful. But enough in the way of preliminaries: on to our central
+            concern!
+        </p>
+
             <p>
                 Recently, in the United States, as well as in much of Europe,
-                and many other areas of the world as well, what is often called
+                and in many other areas of the world as well, what is often called
                 "woke" ideology has had significant influence, as well as
-                having been the object of much criticism. What I want to argue,
+                having been the target of much criticism. But too often, I
+                suggest, people have sided for or against "wokeness" based upon
+                partisan considerations: does this new movement promote
+                policies I like, or not? Do the "woke" tend to vote for
+                candidates from my party, or don't they? I will argue that such
+                methods of judging whether to support
+                an ideological movement are misguided, since any success such
+                movements achieve comes at a cost that even those
+                non-ideologues who support many policies endorsed by an
+                ideology will find too high. 
+                
+                What I want to argue,
                 in this essay, is that:
             </p>
 
