More ideological analysis.

--- a/IdeologicalBlues.html
+++ b/IdeologicalBlues.html
@@ -57,10 +57,17 @@
 		</h1>
 
         <p>
-            An advance warning: in this essay, I am going to employ a
-            particular definition of "ideology." It may not be the definition
-            you like: if not, you can substitute a different word, of your own
-            choosing, whenever I write "ideology." Definitions, in and of
+            My end, in this essay, is to try to shed some light on the recently
+            influential "woke" movement that has captured much so much
+            attention of late. However, I plan to move towards that end by
+            first taking what might seem to be a detour, during which I will
+            examine the character of what I will call "ideology."
+        </p>
+
+        <p>
+            Now, like many English words, "ideology" is overloaded with
+            meanings. I certainly do not claim the meaning I will assign to the
+            word is "the correct" one: Definitions, in and of
             themselves, are never "correct" or "incorrect." If I say, from now
             on, in this essay, I will use "horse" to mean "a sad man sitting
             alone in a diner," you may think my usage very odd, but it is not
@@ -69,85 +76,37 @@
             Of course, if I then claim, "And this is how most English speakers
             use the word 'horse,'" my claim is untrue, but not because I
             defined the word in an idiosyncratic way, but because of my
-            empirical claim that my definition is widely shared. However, in
+            empirical claim that my definition is widely shared. In
             general, definitions of words should be judged based upon whether a
             proferred definition, even if it might diverge from common usage,
             helps us to think more clearly on some topic, or not. So I ask you
             to suspend judgment on the definition of "ideology" I will use 
-            here, until you have considered why I believe this definition is
-            useful. But enough in the way of preliminaries: on to our central
-            concern!
-        </p>
-
-            <p>
-                Recently, in the United States, as well as in much of Europe,
-                and in many other areas of the world as well, what is often called
-                "woke" ideology has had significant influence, as well as
-                having been the target of much criticism. But too often, I
-                suggest, people have sided for or against "wokeness" based upon
-                partisan considerations: does this new movement promote
-                policies I like, or not? Do the "woke" tend to vote for
-                candidates from my party, or don't they? I will argue that such
-                methods of judging whether to support
-                an ideological movement are misguided, since any success such
-                movements achieve comes at a cost that even those
-                non-ideologues who support many policies endorsed by an
-                ideology will find too high. 
-                
-                What I want to argue,
-                in this essay, is that:
-            </p>
-
-            <ol>
-                <li>
-                    While woke ideology, of course, has its own, unique
-                    characteristics, it nevertheless shares many features of
-                    the many other "political religions" that have arisen over
-                    the last several centuries.
-                </li>
-
-                <li>
-                    Recognizing those common characteristics is beneficial to
-                    those who wish to protect social order from the
-                    pathenogenic effects of all political religions (or, as we
-                    shall also designate them, "ideologies").
-                </li>
-
-                <li>
-                    Identifying such commonalities among the political
-                    religions (ideologies) could, most hopefully, even aid
-                    those suffering from infection by one or the other of them
-                    in recognizing that from which they suffer, and point the
-                    way towards a healing from such an affliction.
-                </li>
-            </ol>
-
-            <p>
-                Like many words in the English language, "ideology" has more
-                than one meaning. I am going to use it in a particular sense,
-                not because I think every other sense is wrong, but only because
-                I think that the sense with which I will use it
-                is illuminative. The definition I offer
-                of ideology is drawn from the works of Eric Voegelin, and
-                goes:
+            here, until you have considered my case for why this
+            this definition is useful.  This definition of ideology is drawn
+            primarily from the work of Eric Voegelin, although Michael
+            Oakeshott and Aristole are present in it as well. 
+            It can be briefly summarized as:
             </p>
 
             <p>
-                "An ideology is a collection of postulates for constructing and
-                keeping intact a second reality."
+                An ideology is a collection of axioms and their supporting
+                slogans used for constructing and keeping intact a second reality.
             </p>
 
             <p>
-                By a "second reality" is meant a fantasy, a dream world, a wish
-                about how the world <i>really ought to be</i>. Now, all
-                practical action seeks to replace what is with what ought to
-                be: if, in 1870, I "dream" of a bridge across the East River, I
-                may be able to succeed in getting the Brooklyn Bridge
-                constructed. But I can only do so by accepting the truth of
-                reality as it is when I have my dream: there is no bridge at
-                present, to construct one is going to take a lot of resources
-                and some great engineering, I must work to persuade many people
-                it is feasible, and so on.
+                Now let me expand upon and explain that brief definition.
+                First off, by a "second reality" is meant a fantasy, a dream
+                world, a wish about how the world <i>really ought to be</i>, 
+                that is taken to be, in some sense, more real than the actual
+                world the ideologue lives in.  Of course, all practical action
+                seeks to replace what is with what ought to be: if, in 1870, I
+                "dream" of a bridge across the East River, I may be able to
+                succeed in getting the Brooklyn Bridge constructed. But I can
+                only do so by accepting the truth of reality as it is when I
+                 first imagine my dream: there is no bridge at that moment, to
+                 construct one is going to take a lot of resources and some
+                 great engineering, I must work to persuade many people it is
+                 feasible, and so on.
             </p>
 
             <p>
@@ -420,6 +379,48 @@
                 serves to defend an ideology against penetration by reality,
                 not to rationally respond to outside criticism.
             </p>
+
+            <p>
+                Recently, in the United States, as well as in much of Europe,
+                and in many other areas of the world as well, what is often called
+                "woke" ideology has had significant influence, as well as
+                having been the target of much criticism. But too often, I
+                suggest, people have sided for or against "wokeness" based upon
+                partisan considerations: does this new movement promote
+                policies I like, or not? Do the "woke" tend to vote for
+                candidates from my party, or don't they? I will argue that such
+                methods of judging whether to support
+                an ideological movement are misguided, since any success such
+                movements achieve comes at a cost that even those
+                non-ideologues who support many policies endorsed by an
+                ideology will find too high. 
+                "Wokeness," I will argue, shares many of the characteristics of
+                all ideologies, namely:
+            </p>
+
+            <ol>
+                <li>
+                    While woke ideology, of course, has its own, unique
+                    characteristics, it nevertheless shares many features of
+                    the many other "political religions" that have arisen over
+                    the last several centuries.
+                </li>
+
+                <li>
+                    Recognizing those common characteristics is beneficial to
+                    those who wish to protect social order from the
+                    pathenogenic effects of all political religions (or, as we
+                    shall also designate them, "ideologies").
+                </li>
+
+                <li>
+                    Identifying such commonalities among the political
+                    religions (ideologies) could, most hopefully, even aid
+                    those suffering from infection by one or the other of them
+                    in recognizing that from which they suffer, and point the
+                    way towards a healing from such an affliction.
+                </li>
+            </ol>
 
             <p>
                 So, how do these musings on ideology help us to understand the
