Finishing Ideological Blues.

--- a/IdeologicalBlues.html
+++ b/IdeologicalBlues.html
@@ -66,7 +66,13 @@
 
         <p>
             Now, like many English words, "ideology" is overloaded with
-            meanings. I certainly do not claim the meaning I will assign to the
+            meanings. I have even heard it used to describe things like a
+            sports strategy: "The Chiefs' passing ideology has worked well this
+            season." I plan to offer my own definition here.
+        </p>
+
+        <p>
+            I certainly do not claim the meaning I will assign to the
             word is "the correct" one: Definitions, in and of
             themselves, are never "correct" or "incorrect." If I say, from now
             on, in this essay, I will use "horse" to mean "a sad man sitting
@@ -89,8 +95,10 @@
             </p>
 
             <p>
+            <i>
                 An ideology is a collection of axioms and their supporting
                 slogans used for constructing and keeping intact a second reality.
+            </i>
             </p>
 
             <p>
@@ -117,7 +125,9 @@
                 a <i>denial</i> of reality as it is, and the attempt to blot
                 out that reality with the magical invocation of an alternate
                 reality in which essential aspects of "first" reality are
-                banished by incantation. For instance, Marxism is not a
+                banished by incantation. To the ideologue, primary reality
+                is in some sense a fake world, a shadow of the ideologue's
+                dream. For instance, Marxism is not a
                 reality-based, practical plan for improving the conditions of
                 the working class -- Marx and Engels despised such efforts --
                 it is an attempt to replace the real world, in which life is
@@ -208,7 +218,7 @@
                 degree of common sense, encountering a poster like the one I
                 described above, would be likely to say, "But wait a second:
                 that person in the picture has no legs: certainly that makes
-                doing many things I take for granted as routine extremely
+                doing many things that I take for granted extremely
                 difficult for that person!" (And that common-sensical person,
                 if possessed of a minimal degree of charity, might furthermore
                 entertain the idea that, "Thus, we should really try to give
@@ -228,8 +238,7 @@
 
             <p>
                 I think it is important to note that this understanding of
-                ideologies (with its genesis in the thought of Voegelin, as
-                well as Aristotle, Oakeshott, and many others), is not a
+                ideologies, is not a
                 "partisan," "conservative" strategy for dismissing all
                 "leftist" thought. Quite to the contrary, this critique of
                 ideological thinking cuts across conventional "left-right"
@@ -250,10 +259,11 @@
                 the autocratic rule of the US-supported Shah, or Filipinos
                 whose relatives died fighting the American efforts to
                 "Christianize" the Phillipines (which had been Catholic for 300
-                years by the time the US sought to Christianize them), or ...?,
+                years by the time the US sought to Christianize them), or 
+                [I WILL PUT ONE MORE EXAMPLE HERE -- GC]...?,
                 might be skeptical of plans to place the entire globe under US
-                hegemony, the person noting this will be accused of "hating
-                America." This "comeback" serves the same purpose as the
+                hegemony, the person noting this will be accused of "blaming
+                America first." This "comeback" serves the same purpose as the
                 response to the "ableist" described in the previous paragraph:
                 neither are attempts to rationally engage the critic
                 of the ideology in question. No, both serve, instead, to
@@ -288,6 +298,7 @@
                 computer professionals, is an all-encompassing description of
                 reality. A mathematician friend of mine, faced with a
                 "computationalist" ideologue, asked, "Well, don't you think
+                a uncomputable number like 
                 <i>Pi</i> is real?" The response he got was, "If you think
                 noncomputable numbers are real, then prove it by computing one
                 of them for me." Quite clearly, from any reasonable point of
@@ -298,7 +309,7 @@
                 decimal expansion is infinite and non-repeating). To demand
                 that such a person prove that these non-computable numbers
                 really exist by computing them is like asking that someone
-                prove that there are living dodo birds by shooting them and
+                prove that there are no living dodo birds by shooting some and
                 bringing in their corpses. Given the complete irrationality of
                 this response, it should be clear that its purpose wasn't to
                 rationally engage with this argument against computationalism,
@@ -321,18 +332,20 @@
                 to "you don't want your children to even know that gay people
                 exist" makes no rational sense. So why in the world would a
                 commenter post this? Once again, we are witnessing an ideology
-                as consisting of "postulates for constructing and keeping
-                intact a second reality." The postulate in play here is that
+                as consisting of "axioms and slogans for constructing and keeping
+                intact a second reality." The axiom in play here is that
                 any person who objects to any aspect of the ongoing sexual
                 revolution, whatever their argument might be, in reality is
-                just a reactionary puritan. The utility of adopting this stance
+                just a reactionary puritan. The axiom is then given efficacy
+                by being formulated as a slogan.
+                The utility of adopting this stance
                 is that the adoptor never needs to address any actual arguments
                 put forward by anyone who dissents from their ideology: no
                 need, such people are just repressed neurotics who wish to
                 impose their own inability to "realize themselves as sexual
                 beings" on to others. Given this identification of the foe as
                 "oppresive other," the need to deal with any of their actual
-                arguments is swepy away.
+                arguments is swept away.
             </p>
 
             <p>
@@ -355,8 +368,8 @@
                 <i>ought</i> to be obvious, at least to anyone seriously
                 engaged in contemplating reality, and not just trying to shore
                 up some previously embraced dream world: if our ideas of what
-                is real actually don't make reliable contact with what is
-                actually real, then how does Musk know that human beings really
+                is real don't make reliable contact with what <i>is</i>
+                real, then how does Musk know that human beings really
                 have "skulls"? After all, aren't "skulls" just another one of
                 those items we believe are real but are, in fact, just "an
                 electrical signal"? Going even further... how does Musk even
@@ -364,7 +377,7 @@
                 all, our only evidence for the existence of electrical signals
                 comes to us through our perceptual apparatus... which,
                 according to Musk, can't be relied upon as being genuinely in
-                touch with what is actually real. Since it is only through
+                touch with reality. Since it is only through
                 these "electrical signals," which may have little inherent
                 connection to reality, that we know about skulls, or even about
                 electricity... well, Musk's whole "profound" insight falls
@@ -394,14 +407,12 @@
                 movements achieve comes at a cost that even those
                 non-ideologues who support many policies endorsed by an
                 ideology will find too high. 
-                "Wokeness," I will argue, shares many of the characteristics of
-                all ideologies, namely:
+                "Wokeness," I will argue:
             </p>
 
             <ol>
                 <li>
-                    While woke ideology, of course, has its own, unique
-                    characteristics, it nevertheless shares many features of
+                    Woke ideology shares significant features with
                     the many other "political religions" that have arisen over
                     the last several centuries.
                 </li>
@@ -409,8 +420,7 @@
                 <li>
                     Recognizing those common characteristics is beneficial to
                     those who wish to protect social order from the
-                    pathenogenic effects of all political religions (or, as we
-                    shall also designate them, "ideologies").
+                    pathenogenic effects of all political religions.
                 </li>
 
                 <li>
@@ -429,7 +439,7 @@
                 pronouncements of a multitude of major corporations?
                 First of all, it is important to identify the "woke" movement
                 <i>as</i> an ideology, and recognize its kinship with other
-                ideologies, such as Comunism and Nazism. That recognition alone
+                ideologies, such as Communism and Nazism. That recognition alone
                 could wake many to the dangers of wokeness: since ideologies
                 promise heaven on earth, but can never actually deliver on the
                 promise, to continue in existence, they must continually
@@ -451,7 +461,7 @@
                 rights" for transexuals, and "multicultural" curriculums
                 in public schools, the woke continually become ever more shrill
                 and dissatisfied about how oppresive our culture remains.
-                (I use scare quotes around "multiculturalism" aboce
+                (I use scare quotes around "multiculturalism" above
                 because, while I would enthusiastically
                 endorse <i>real</i> multiculturalism in schools -- for
                 instance, requiring students to become fluent in an Asian
@@ -460,7 +470,7 @@
                 Arabic -- what passes for multiculturalism today is generally
                 just a very superficial "museum tour" of a gallimaufry of
                 trendy cultures: the Cubans, don't they have great music! The
-                Chinese, great vases, And the Mexicans, what tasty tacos!)
+                Chinese, great vases, and the Mexicans, what tasty tacos!)
                 Once we understand the pattern common to all ideologies, their
                 promise to create heaven on earth, coupled with their inherent
                 inability to deliver on that promise, and thus their need, if
