Added Swift and Aron to Vol 2.

--- a/AntiRats/vol2.html
+++ b/AntiRats/vol2.html
@@ -83,6 +83,13 @@
             </li>
 
             <li>
+                Jonathan Swift
+                <br />
+                Donal Gill,
+                Concordia University
+            </li>
+
+            <li>
                 Joseph de Maistre
             </li>
 
@@ -146,6 +153,13 @@
 
             <li>
                 Paul Feyerabend: Anything Goes
+            </li>
+
+            <li>
+                Raymond Aron
+                <br />
+                Travis Smith,
+                Concordia University
             </li>
 
             <li>
