Added Donal Gill back in.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -189,6 +189,13 @@
             </li>
 
             <li>
+                Jonathan Swift
+                <br />
+                Dónal Gill,
+                Concordia University
+            </li>
+
+            <li>
                 Joseph de Maistre
                 <br />
                     <a href="bios.html#smith">
