--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -210,10 +210,8 @@
             <li>
                 Fyodor Dostoevsky
                 <br>
-                    <a href="bios.html#ferrell">
-                    Jason Ferrell,
-                    </a>
-                    Concordia University
+                    Richard Avramenko,
+                    University of Wisconsin-Madison
             </li>
 
             <li>
