Added Wyllie and Finley bios.

--- a/AntiRats2/bios.html
+++ b/AntiRats2/bios.html
@@ -138,6 +138,21 @@
             <hr width="50%">
 
             <li>
+                <a name="finley">
+                <span class="contrib">Emily B. Finley</span>
+                holds a PhD in Politics from The Catholic University of America
+                and is currently a postdoctoral scholar at Stanford University.
+                She is the managing editor of <i>Humanitas</i>, an academic journal of
+                politics and culture published by The Center for the Study of
+                Statesmanship.
+                </a>
+                <br>
+                <img src="graphics/Finley.jpg" width="14%" class="center-img">
+            </li>
+
+            <hr width="50%">
+
+            <li>
                 <a name="garrison">
                 <span class="contrib">Justin D. Garrison</span>
                     is an associate professor of political science at Roanoke
@@ -307,6 +322,22 @@
                 </a>
                 <br>
                 <img src="graphics/Wilford.jpg" width="14%" class="center-img">
+            </li>
+
+            <li>
+                <a name="wyllie">
+                <span class="contrib">Robert Wyllie</span>
+                </a>
+                 is a Ph.D. candidate in the Department of Political Science at
+                 the University of Notre Dame. His research focuses upon
+                 Spinoza's moral psychology as a pivot in the modern
+                 understanding of envy. His work, which includes several
+                 articles on the political theory of Kierkegaard, has appeared
+                 in <i>Perspectives on Political Science</i>, 
+                 <i>Res Philosophica</i>, <i>Telos</i>,
+                 and other journals.
+                <br>
+                <img src="graphics/Wyllie.jpg" width="14%" class="center-img">
             </li>
 
         </ul>
