Fixed Lowney link.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -222,9 +222,8 @@
                 Gregory Bateson
                 <br />
                 <a href="bios.html#lowney">
-                    Charles Lowney,
+                    Charles Lowney</a>,
                     Hollins University
-                </a>
             </li>
 
             <li>
