Changed Ferenc's affiliation.

--- a/AntiRats2/bios.html
+++ b/AntiRats2/bios.html
@@ -177,8 +177,8 @@
                 is a political philosopher and historian of political thought.
                 His PhD was on the Scottish Enlightenment. He is research
                 professor and director of the Research Institute of Politics
-                and Government at the National University of Public Service in
-                Budapest. He is senior fellow and earlier director of the
+                and Government, National University of Public Service.
+                He is senior fellow and earlier director of the
                 Institute of Philosophy of the Hungarian Academy of Sciences.
                 His publications include <i>Prudentia Iuris: Towards a
                 Pragmatic Theory of Natural Law</i> (2000) and the coedited
