Updated Ferenc's affiliation.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -288,8 +288,10 @@
                 <br />
                     <a href="bios.html#horcher">
                         Ferenc Hörcher</a>,
-                Pázmány Péter Catholic University, Budapest and The Institute
-                of Philosophy of the Hungarian Academy of Sciences
+                        Research professor and director,
+                        Research Institute of Politics and Government,
+                        National University of Public Service; Senior
+                        fellow of the Institute of Philosophy in Budapest
             </li>
 
             <li>
