--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -204,7 +204,8 @@
                 <br />
                 <a href="bios.html#sportiello">
                     Daniel Sportiello
-                </a>
+                </a>,
+                University of Mary
             </li>
 
             <li>
@@ -231,6 +232,10 @@
                 <br />
                     Gulsen Seven,
                     TED University
+            </li>
+
+            <li>
+                Raymond Aron
             </li>
 
             <li>
