--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -200,7 +200,8 @@
             </li>
 
             <li>
-                Elizabeth Anscombe
+                <a href="anscombe.html">
+                    Elizabeth Anscombe on Rationalism</a>
                 <br />
                 <a href="bios.html#sportiello">
                     Daniel Sportiello
