Added Max Weber abstract.

--- a/AntiRats2/bios.html
+++ b/AntiRats2/bios.html
@@ -243,6 +243,15 @@
             <hr width="50%">
 
             <li>
+                <a name="miryetka">
+                <span class="contrib">Lucie Miryekta</span>
+                is completing her Ph.D. at the Catholic University of America.
+                </a>
+            </li>
+
+            <hr width="50%">
+
+            <li>
                 <a name="pourvand">
                 <span class="contrib">Kaveh Pourvand</span>
                 is a political theorist. He received his PhD in Political
