--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -165,6 +165,14 @@
             </li>
 
             <li>
+                Max Weber and the Limits of Reason
+                <br />
+                    <a href="bios.html#miryekta">
+                    Lucie Miryekta</a>,
+                    Catholic University of America
+            </li>
+
+            <li>
                 Owen Barfield
                 <br />
                     <a href="bios.html#wilford">
