--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -165,7 +165,8 @@
             </li>
 
             <li>
-                Max Weber and the Limits of Reason
+                <a href="weber.html">
+                    Max Weber and the Limits of Reason</a>
                 <br />
                     <a href="bios.html#miryekta">
                     Lucie Miryekta</a>,
