--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -157,7 +157,9 @@
             </li>
 
             <li>
-                Mikhail Bulgakov
+                <a href="bulgakov.html">
+                Devils, Dogs, and Frogs: Mikhail Bulgakov’s Political Allegorie
+                </a>
                 <br />
                 <a href="bios.html#ferrell">
                     Jason Ferrell</a>,
